implemented wire mock and rest template