@@ -163,7 +163,7 @@ class JobOfferFacadeTest {
         //when
         List<JobOfferDto> fetchedOffers = jobOfferFacade.fetchAndSaveAllOffers();
         //then
-        assertThat(fetchedOffers.getFirst().url()).isNotEqualTo(toSave2.url());
+        assertThat(fetchedOffers.get(0).url()).isNotEqualTo(toSave2.url());
         org.assertj.core.api.Assertions.assertThat(fetchedOffers).hasSize(1);
         org.assertj.core.api.Assertions.assertThat(jobOfferFacade.findAllOffer())
                 .hasSize(3);
